# hfsnotify

./: .gitignore  .gitmodules  .hlint.yaml  .travis.yml  CHANGELOG.md  README.md  Setup.hs  appveyor.yml  cabal.project  fsnotify.cabal  package.yaml  stack-ghc90.yaml  stack-ghc92.yaml  stack-ghc94.yaml  stack-ghc96.yaml  stack-ghc98.yaml  stack-lts12.yaml  stack-lts13.yaml  stack-lts14.yaml  stack-lts15.yaml  stack-lts16.yaml  stack.yaml  stack_ghc8.4.yaml
.github/workflows/: ci.yml
System/IO/: FSNotify.hs
System/IO/FSNotify/: Linux.hs  Polling.hs  Win32.hs
example/: Main.hs
src/System/: FSNotify.hs
src/System/FSNotify/: Debounce.hs  Devel.hs  Find.hs  Linux.hs  Listener.hs  OSX.hs  Path.hs  Polling.hs  React.hs  Types.hs  Win32.hs
src/System/FSNotify/Debounce/: StateMachine.hs
src/System/FSNotify/Debouncer/: Helper.hs  Naive.hs  Reloader.hs
src/System/FSNotify/Linux/: Util.hs
src/System/IO/: FSNotify.hs
src/System/IO/FSNotify/: Devel.hs  InternalTypes.hs  Linux.hs  Listener.hs  OSX.hs  Path.hs  Polling.hs  Types.hs  Win32.hs
test/: EventTests.hs  EventUtils.hs  FSNotify.hs  Main.hs  Path.hs  Test.hs  Util.hs  main.hs  new.hs  test.hs  test001-create-delete.hs  watch-here.hs
test/FSNotify/Test/: EventTests.hs  Util.hs
win-src/System/Win32/: FileNotify.hsc  Notify.hs
